[lib]
crate-type = ["cdylib"]

[dependencies]
serde = "1.0.219"
serde_json = "1.0.140"
worker = { version = "0.6.0", features = ["http"] }
worker-macros = { version = "0.6.0", features = ["http"] }

[package]
name = "wolfyta-link"
version = "0.1.0"
edition = "2021"
authors = ["TeamWolfyta <kieran@wolfyta.dev>"]

[package.metadata.release]
release = false
